Implementación de autenticación de cuenta, envío de correo electrónico y activación de cuenta
